--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@toolpad/core": "^0.8.1",
+    "axios": "^1.4.0",
     "md5": "^2.3.0",
     "mdb-react-ui-kit": "^9.0.0",
     "react": "^18.3.1",
